--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en" data-theme="winter">
   <head>
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta charset="utf-8" />
     <title>Dan Stollenwerk</title>
     <meta
@@ -543,11 +544,11 @@
                   <!-- scroll indicators -->
                   <div
                     id="project-list-top-indicator"
-                    class="pointer-events-none absolute left-2 right-2 top-2 h-[2px] bg-[var(--accent)] rounded-full opacity-0 transition-opacity duration-150"
+                    class="pointer-events-none absolute left-0 right-0 top-0 h-[2px] bg-[var(--accent)] rounded-full opacity-0 transition-opacity duration-150"
                   ></div>
                   <div
                     id="project-list-bottom-indicator"
-                    class="pointer-events-none absolute left-2 right-2 bottom-2 h-[2px] bg-[var(--accent)] rounded-full opacity-0 transition-opacity duration-150"
+                    class="pointer-events-none absolute left-0 right-0 bottom-0 h-[2px] bg-[var(--accent)] rounded-full opacity-0 transition-opacity duration-150"
                   ></div>
                 </div>
 
@@ -569,11 +570,11 @@
 
                   <div
                     id="gallery-top-indicator"
-                    class="pointer-events-none absolute left-2 right-2 top-2 h-[2px] bg-[var(--accent)] rounded-full opacity-0 transition-opacity duration-150"
+                    class="pointer-events-none absolute left-0 right-0 top-0 h-[2px] bg-[var(--accent)] rounded-full opacity-0 transition-opacity duration-150"
                   ></div>
                   <div
                     id="gallery-bottom-indicator"
-                    class="pointer-events-none absolute left-2 right-2 bottom-2 h-[2px] bg-[var(--accent)] rounded-full opacity-0 transition-opacity duration-150"
+                    class="pointer-events-none absolute left-0 right-0 bottom-0 h-[2px] bg-[var(--accent)] rounded-full opacity-0 transition-opacity duration-150"
                   ></div>
                 </div>
               </div>
