--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
+      html, body {
+        overscroll-behavior: none;
+      }
+
       :root {
         /* unified panel colour */
         --panel-main: #d8e9e9;
